# cmake-conan-starter-project

./: .gitignore  CMakeLists.txt  b.bat  conanfile.txt
src/: CMakeLists.txt
src/tests/: CMakeLists.txt  tests.cpp
