cmake_minimum_required(VERSION 3.10)
project(project_template)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

string(COMPARE EQUAL "${APP_CMAKE_BUILD_TYPE}" "" is_empty)
if (is_empty)
    # Set a default build type
	set(APP_CMAKE_BUILD_TYPE "Debug")
endif()
set(APP_CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE})
message("\n=====\nBuild type is ${APP_CMAKE_BUILD_TYPE}\n=====\n")

set(APP_BIN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin/${APP_CMAKE_BUILD_TYPE})
if (NOT EXISTS ${APP_BIN_OUTPUT_DIRECTORY})
	FILE(MAKE_DIRECTORY ${APP_BIN_OUTPUT_DIRECTORY})
endif()

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${APP_BIN_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${APP_BIN_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${APP_BIN_OUTPUT_DIRECTORY})

# Here you can put your includes
include_directories("${CMAKE_CURRENT_LIST_DIR}/include")

add_subdirectory(src)
